--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 spring:
   application:
-    name: ip-blocklist-api
+    name: blacklist-hub
 
   # R2DBC configuration (for runtime)
   r2dbc:
-    url: r2dbc:mysql://localhost:3306/ip_blocklist
+    url: r2dbc:mysql://localhost:3306/blacklist_hub
     username: root
     password: root
     pool:
@@ -16,7 +16,7 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
-    url: jdbc:mysql://localhost:3306/ip_blocklist
+    url: jdbc:mysql://localhost:3306/blacklist_hub
     user: root
     password: root
     baseline-on-migrate: true
@@ -26,17 +26,19 @@ spring:
     level:
       root: INFO
       org.springframework.r2dbc: WARN
-      com.ipblocklist: DEBUG
+      com.blacklisthub: DEBUG
 
   # Actuator (for healthcheck, info, etc.)
   management:
     endpoints:
       web:
         exposure:
-          include: health, info, metrics
+          include: health, info, metrics, health-liveness, health-readiness
     endpoint:
       health:
         show-details: when_authorized
+        probes:
+          enabled: true
 
 # Slack configuration
 slack:
